--- a/public/textos/more-aguas.html
+++ b/public/textos/more-aguas.html
@@ -1,2 +1,26 @@
-<h3>Contenido extendido — Aguas</h3>
-<p>Reemplace este archivo con el contenido del área.</p>
+<h3>Aguas</h3>
+<p>Proveemos equipos y soluciones para urbanizaciones e industrias de todo tipo y escala, diseñadas caso a caso para la remoción de contaminantes. Es posible obtener agua en óptima calidad a partir de diversas fuentes (superficiales, subterráneas) y también de efluentes (reuso), combinando diseño de procesos y equipamiento de primera calidad para lograr soluciones eficientes y confiables.</p>
+
+<h4>Equipos y unidades de proceso convencionales</h4>
+<ul>
+  <li>Pretratamiento (rejas y tamices)</li>
+  <li>Sistemas de coagulación–floculación</li>
+  <li>Sedimentación de alta tasa con módulos plásticos</li>
+  <li>Flotación por aire disuelto (DAF)</li>
+  <li>Filtros a gravedad o presión (monomedia o multimedia)</li>
+  <li>Desinfección (cloración, radiación UV, ozonización)</li>
+  <li>Puentes barredores para clarificadores y espesadores de barros</li>
+  <li>Sistemas de deshidratación de barros</li>
+</ul>
+
+<h4>Procesos y equipos no convencionales</h4>
+<ul>
+  <li>Filtros de carbón activado u otros medios para remoción específica</li>
+  <li>Microfiltración, Ultrafiltración, Ósmosis inversa</li>
+  <li>Electrodeionización</li>
+  <li>Resinas de intercambio iónico (deionización, ablandamiento, remoción de iones)</li>
+  <li>Oxidación avanzada</li>
+</ul>
+
+<h4>Soluciones modulares y plantas compactas</h4>
+<p>Soluciones compactas para pequeñas urbanizaciones, combinando tecnologías convencionales y no convencionales según la necesidad.</p>
